--- a/style.css
+++ b/style.css
@@ -1,16 +1,17 @@
 :root {
-  --light: 200;
+  --light: 100;
   --regular: 400;
   --bold: 700;
+  --grey: #4a4a4a;
 }
 
 html {
   box-sizing: border-box;
-  font-family: 'Heebo', Helvetica, sans-serif;
+  font-family: "Heebo", Helvetica, sans-serif;
   font-size: 10px;
   font-weight: var(--regular);
   letter-spacing: 1px;
-  margin: 0;
+  color: var(--grey);
 }
 
 *,
@@ -20,20 +21,103 @@ html {
 }
 
 body {
-  background-color: bisque;
   padding: 0;
   margin: 0;
 }
 
 header {
-  background-color: rgba(255,255,255,0.75);
+  position: relative;
+}
+
+header img {
+  width: 100%;
+}
+
+#features {
+  position: absolute;
+  bottom: 200px;
+  left: 80px;
+}
+
+.first {
+  animation: highlight-cycle 2s infinite;
+}
+
+.second {
+  animation: highlight-cycle 2s infinite;
+  animation-delay: 1s;
+}
+
+.third {
+  animation: highlight-cycle 2s infinite;
+  animation-delay: 2s;
+}
+
+.fourth {
+  animation: highlight-cycle 2s infinite;
+  animation-delay: 3s;
+}
+
+.fifth {
+  animation: highlight-cycle 2s infinite;
+  animation-delay: 5s;
+}
+
+@keyframes highlight-cycle {
+  50% {
+    font-weight: var(--regular);
+    color: white;
+    text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
+  }
+}
+
+h2 {
+  font-weight: var(--light);
+  font-size: 4rem;
+  color: #e0dcda;
+  letter-spacing: 5px;
+}
+
+nav {
+  background-color: rgba(255, 255, 255, 0.75);
+  box-shadow: 0px 2px 10px rgba(125, 125, 125, 0.5);
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 1;
+}
+
+nav ul {
   display: flex;
+  align-items: baseline;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+nav ul li {
+  font-size: 2.5rem;
+  font-weight: var(--light);
+  margin-left: 4rem;
 }
 
 h1 {
-  
+  font-size: 5.5rem;
+  font-weight: var(--regular);
+  margin: 10px 0 0 40px;
 }
 
-nav{
+#video {
+  max-width: 624px;
+  margin: auto;
+  padding: 80px 0 80px 0;
+}
 
+main p {
+  font-size: 2rem;
+  text-align: center;
+  letter-spacing: 2px;
+  padding: 0 90px 0 90px;
+  margin: 0;
+  font-weight: 300;
 }
