--- a/style.css
+++ b/style.css
@@ -27,31 +27,24 @@ body {
   margin: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
+a:visited {
+  color: var(--grey);
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 header {
   position: relative;
 }
 
 header img {
   width: 100%;
-}
-
-#features {
-  position: absolute;
-  bottom: 200px;
-  left: 80px;
-}
-
-h2 {
-  font-weight: var(--light);
-  font-size: 4rem;
-  color: var(--h2-origin-color);
-  letter-spacing: 5px;
-}
-
-.first {
-  font-weight: var(--regular);
-  color: white;
-  text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 nav {
@@ -77,6 +70,30 @@ nav ul li {
   margin-left: 4rem;
 }
 
+#hamburger {
+  display: none;
+}
+
+#features {
+  position: absolute;
+  bottom: 15%;
+  left: 80px;
+}
+
+h2 {
+  font-weight: var(--light);
+  font-size: 4rem;
+  color: var(--h2-origin-color);
+  letter-spacing: 5px;
+}
+
+.first {
+  font-weight: var(--regular);
+  color: white;
+  text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+
 h1 {
   font-size: 5.5rem;
   font-weight: var(--regular);
@@ -98,7 +115,7 @@ main p {
   font-weight: 300;
 }
 
-.cards {
+#cards {
   display: grid;
   grid-template-columns: repeat(4, 250px);
   grid-template-rows: 1fr 60px;
@@ -148,7 +165,7 @@ button {
   height: auto;
 }
 
-.contact-us {
+#contact-us {
   width: 100%;
   height: 120px;
   position: absolute;
@@ -174,7 +191,48 @@ button {
   font-weight: var(--regular);
 }
 
-/* animation goes below here */
+/* *******************************Media queries********************************** */
+@media (max-width: 1300px) {
+  #features {
+    bottom: 10%;
+  }
+  h2 {
+    margin: 20px 0 20px 0;
+  }
+  main p {
+    font-size: 1.8rem;
+  }
+  #cards {
+    grid-template-columns: repeat(4, 200px);
+    grid-column-gap: 30px;
+    max-width: 890px;
+  }
+  .card {
+    grid-template-rows: 230px 105px;
+    font-size: 1.2rem;
+    overflow: hidden;
+  }
+  .card-img {
+    height: 100%;
+  }
+  .card-details {
+    margin: 0 10px 0 10px;
+  }
+  button {
+    font-size: 1.5rem;
+  }
+  #contact-us {
+    font-size: 1.6rem;
+  }
+}
+
+@media (max-width: 1000px){
+  ul li:not(:first-child) {
+    display: none;
+  }
+}
+
+/* ***************************animation goes below here*************************** */
 
 .first {
   animation: highlight-cycle1 var(--animation-time) infinite;
