--- a/style.css
+++ b/style.css
@@ -89,7 +89,6 @@ h2 {
   text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
-
 h1 {
   font-size: 5.5rem;
   font-weight: var(--regular);
@@ -114,9 +113,8 @@ main p {
 #cards {
   display: grid;
   grid-template-columns: repeat(4, 250px);
-  grid-template-rows: 1fr 60px;
+  grid-template-rows: 1fr;
   grid-column-gap: 60px;
-  grid-row-gap: 20px;
   margin: auto;
   max-width: 1180px;
   padding: 80px 0 80px 0;
@@ -124,9 +122,7 @@ main p {
 
 .card {
   display: grid;
-  grid-template-rows: 300px 105px;
-  border: 1px solid var(--grey);
-  border-radius: 29px;
+  grid-template-rows: 405px 70px;
   justify-items: center;
   align-items: center;
   text-align: center;
@@ -134,20 +130,36 @@ main p {
   font-weight: var(--light);
 }
 
+.top-container {
+  border: 1px solid var(--grey);
+  border-radius: 29px;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-rows: 300px 105px;
+}
+
+.card-img {
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  border-radius: 29px;
+}
+
+.card-details {
+  align-self: center;
+}
+
 button {
   background-color: white;
   border: 1px solid var(--grey);
   border-radius: 29px;
-  font-size: 2rem;
+  font-size: 1.8rem;
   font-weight: var(--light);
   letter-spacing: 2px;
-}
-
-.card-img {
-  max-height: 300px;
   width: 100%;
-  z-index: -1;
-  border-radius: 29px;
+  height: 50px;
+  align-self: end;
 }
 
 .img-container {
@@ -177,7 +189,7 @@ button {
   padding-left: 80px;
 }
 
-.contact-us p {
+#contact-us p {
   margin: 0;
   padding-left: 80px;
   font-weight: var(--light);
@@ -187,7 +199,7 @@ button {
   font-weight: var(--regular);
 }
 
-/* *******************************Media queries********************************** */
+/* 1300 *******************************Media queries  1300 ********************************** */
 @media (max-width: 1300px) {
   #features {
     bottom: 10%;
@@ -198,33 +210,69 @@ button {
   main p {
     font-size: 1.8rem;
   }
-  #cards {
-    grid-template-columns: repeat(4, 200px);
-    grid-column-gap: 30px;
-    max-width: 890px;
-  }
-  .card {
-    grid-template-rows: 230px 105px;
-    font-size: 1.2rem;
-    overflow: hidden;
-  }
-  .card-img {
-    height: 100%;
-  }
-  .card-details {
-    margin: 0 10px 0 10px;
-  }
-  button {
-    font-size: 1.5rem;
-  }
+
   #contact-us {
     font-size: 1.6rem;
   }
+
+  #cards {
+    grid-template-columns: repeat(4, 200px);
+    max-width: 950px;
+    grid-column-gap: 50px;
 }
 
-@media (max-width: 1000px){
-  
+.card {
+  display: grid;
+  grid-template-rows: 355px 70px;
+  font-size: 1.3rem;
 }
+
+.top-container {
+  grid-template-rows: 250px 105px;
+}
+
+/* 1000 *******************************Media queries  1000 ********************************** */
+
+@media (max-width: 1000px) {
+  
+  #features {
+    bottom: 10%;
+    left: 80px;
+  }
+
+  h2 {
+    font-size: 3rem;
+    letter-spacing: 3px;
+    margin: 10px 0 10px 0;
+  }
+
+  #cards {
+    display: grid;
+    grid-template-columns: repeat(2, 250px);
+    grid-template-rows: 1fr 1fr;
+    grid-row-gap: 50px;
+    max-width: 550px;
+  }
+
+  .card {
+    grid-template-rows: 405px 70px;
+    font-size: 1.6rem;
+  }
+
+  .top-container {
+    grid-template-rows: 300px 105px;
+  }
+
+  #contact-us {
+    font-size: 1.5rem;
+  }
+
+  .title {
+    font-size: 4rem;
+  }
+}
+
+/* 700 *******************************Media queries  700 ********************************** */
 
 /* ***************************animation goes below here*************************** */
 
